<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#00C000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="8dp"/>

        <org.opencv.android.JavaCameraView
            android:id="@+id/cameraView"
            android:layout_width="1px"
            android:layout_height="1px"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/camera_output"/>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/buttonStartPreview"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_button_text" />

            <Button
                android:id="@+id/buttonStopPreview"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stop_button_text"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/buttonSwitchCamera"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/switch_camera_button_text"/>
        </LinearLayout>

<!--        <CheckBox-->
<!--            android:id="@+id/checkboxEnableProcessing"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/enable_processing_checkbox_text"-->
<!--            android:layout_marginBottom="16dp"/>-->

        <EditText
            android:id="@+id/editTextUserNameForSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/user_name_field_hint"
            android:inputType="textPersonName"
            android:visibility="gone"
            android:layout_marginBottom="8dp"/>

<!--        <Button-->
<!--            android:id="@+id/buttonSaveSample"-->
<!--            style="?android:attr/buttonBarButtonStyle"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/save_sample_button_text"-->
<!--            android:visibility="gone"-->
<!--            android:layout_marginBottom="16dp"/>-->

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/buttonIdentify"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/identify_button_text"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"/>

    </LinearLayout>
</ScrollView>